Changes
=======

.. currentmodule:: objgraph

1.7.0 (unreleased)
------------------

- New function: :func:`get_leaking_objects`, based on `a blog post by
  Kristján Valur
  <http://blog.ccpgames.com/kristjan/2010/12/08/finding-c-reference-leaks-using-the-gc-module/>`_.

- New ``objects`` argument for :func:`count`, :func:`typestats`,
  :func:`most_common_types`, :func:`show_most_common_types`, and
  :func:`by_type`.

- Edges pointing to function attributes such as __defaults__ or __globals__
  are now labeled.

- Bugfix: '\0' and other unsafe characters used in a dictionary key could
  break graph generation.

- Bugfix: show_refs(..., filename='graph.dot') would then go to complain
  about unrecognized file types and then produce a png.


1.6.0 (2010-12-18)
------------------

- Python 3 support, thanks to Stefano Rivera (fixes `LP#687601
  <http://launchpad.net/bugs/687601>`_).

- Removed weird weakref special-casing.


1.5.1 (2010-12-09)
------------------

- Avoid test failures in uncollectable-garbage.txt (fixes `LP#686731
  <http://launchpad.net/bugs/686731>`_).

- Added HACKING.txt.


1.5.0 (2010-12-05)
------------------

- Show frame objects as well (fixes `LP#361704
  <http://launchpad.net/bugs/361704>`_).

- New functions: :func:`show_growth`, :func:`show_chain`.

- :func:`find_backref_chain` returns ``[obj]`` instead of ``None`` when a chain
  could not be found.  This makes ``show_chain(find_backref_chain(...), ...)``
  not break.

- Show how many references were skipped from the output of
  :func:`show_refs`/:func:`show_backrefs` by specifying ``too_many``.

- Make :func:`show_refs` descend into modules.

- Do not highlight classes that define a ``__del__``, highlight only instances of
  those classes.

- Option to show reference counts in :func:`show_refs`/:func:`show_backrefs`.

- Add `Sphinx <http://pypi.python.org/pypi/Sphinx>`_ documentation and a PyPI
  long description.


1.4.0 (2010-11-03)
------------------
