@@ -10,6 +10,8 @@ Changes
   Kristján Valur
   <http://blog.ccpgames.com/kristjan/2010/12/08/finding-c-reference-leaks-using-the-gc-module/>`_.
 
+- New function: :func:`find_ref_chain`.
+
 - New ``objects`` argument for :func:`count`, :func:`typestats`,
   :func:`most_common_types`, :func:`show_most_common_types`, and
   :func:`by_type`.
